[tool.poetry]
name = "chain-of-density"
version = "0.1.0"
description = ""
authors = ["Richard Awoyemi  <35015261+RichardAwoyemi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
configparser = "^6.0.0"
flask = "^2.3.3"
logging = "^0.4.9.6"


[tool.poetry.group.dev.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cod = 'main:main'
cod-app = "app:app"
